profile img style alignment fix

--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -16,3 +16,8 @@ body {
 .navbar{
   margin-bottom: 20px;
 }
+.profile-img{
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+}
